# patient-management-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  configure.sh  docker-compose.yml  example.env  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
_docs/er_diagram/raw/: patient_management.mdj
account/: admin.py  apps.py
account/domain/models/: __init__.py  manager.py  profile.py  user.py
account/migrations/: 0001_initial.py  0002_specialization_employeprofile_specializations.py
contrib/: app_config.py  gunicorn.conf.py
medical_screening/: apps.py
medical_screening/domain/models/: __init__.py  screening.py
medical_screening/migrations/: 0001_initial.py
patient_management/: asgi.py  urls.py  wsgi.py
patient_management/core/: models.py
patient_management/settings/: base.py  development.py
